# kernel-3

./: .gitignore  .syntastic_c_config  .travis.yml  CMakeLists.txt  README.md  build.sh
.ci/: get-cmake.sh
kernel/: CMakeLists.txt  init.c  main.c  system.asm  system.nasm
kernel/boot/: boot.asm  boot.s
kernel/include/: bcm_2836.h  memory.h  util.h  vm.h
kernel/io/: print.c
kernel/memory/: memory.c
script/: link.ld  load_env.sh  run_qemu.sh
src/: system.asm
src/boot/: boot.asm
src/include/: mmap.h  print.h  vm.h
src/memory/: mmap.c  vm.c
toolchain/: CMakeLists.txt  build.sh
